<resources>
    <string name="app_name" translatable="false">HouseHeroesV2</string>
    <string name="action_settings">Settings</string>
    <string name="app_logo" translatable="false">House Heroes Logo</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label" translatable="false">First Fragment</string>
    <string name="second_fragment_label" translatable="false">Second Fragment</string>
    <string name="next" translatable="false">Next</string>
    <string name="previous" translatable="false">Previous</string>

    <string name="default_user_name">User Name</string>
    <string name="parent_name">Parent\'s Name</string>

    <string name="profile_picture_desc">Profile picture</string>

    <string name="btn_add_chore">Add Chore</string>

    <string name="title_add_chore">Add Chore</string>
    <string name="hint_chore_name">Enter chore name</string>
    <string name="btn_save_chore">Save</string>
    <string name="btn_cancel_chore">Cancel</string>

    <string name="btn_add_child">Add Child</string>

    <string name="title_add_child">Add Child</string>
    <string name="hint_child_name">Enter child\'s name</string>
    <string name="btn_save_child">Save</string>
    <string name="btn_cancel_child">Cancel</string>

    <string name="btn_change_password">Change Password</string>

    <string name="title_change_password">Change Password</string>
    <string name="hint_old_password">Enter old password</string>
    <string name="hint_new_password">Enter new password</string>
    <string name="hint_confirm_password">Confirm new password</string>
    <string name="btn_save">Save</string>
    <string name="btn_cancel">Cancel</string>

    <string name="btn_delete_account">Delete Account</string>

    <string name="title_delete_account">Delete Account</string>
    <string name="warning_delete_account">Are you sure you want to delete your account? This action cannot be undone.
    </string>
    <string name="btn_confirm_delete">Confirm Deletion</string>
    <string name="btn_cancel_delete">Cancel</string>

    <string name="btn_log_out">Log Out</string>
    <string name="title_log_out">Log Out</string>

    <string name="logout_confirm_message">Are you sure you want to log out?</string>
    <string name="confirm_logout_btn">Log Out</string>
    <string name="cancel_logout_btn">Cancel</string>

    <string name="languages">Languages</string>
    <string name="language_english">English</string>
    <string name="language_spanish">Spanish</string>
    <string name="language_french">French</string>

    <string name="lorem_ipsum" translatable="false">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris volutpat, dolor id
        interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus dui nec risus. Maecenas non sodales
        nisi, vel dictum dolor. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos
        himenaeos. Suspendisse blandit eleifend diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet,
        imperdiet nisl a, ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus egestas, est a
        condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed neque. Morbi tellus erat, dapibus ut
        sem a, iaculis tincidunt dui. Interdum et malesuada fames ac ante ipsum primis in faucibus. Curabitur et eros
        porttitor, ultricies urna vitae, molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl
        nec dolor bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit amet auctor at,
        mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel, molestie quam. Fusce blandit tincidunt
        nulla, quis sollicitudin libero facilisis et. Integer interdum nunc ligula, et fermentum metus hendrerit id.
        Vestibulum lectus felis, dictum at lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse
        sodales nunc ligula, in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh. Morbi laoreet, tortor
        sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui non lorem. Nam mollis ipsum quis auctor
        varius. Quisque elementum eu libero sed commodo. In eros nisl, imperdiet vel imperdiet et, scelerisque a mauris.
        Pellentesque varius ex nunc, quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non
        viverra ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a placerat
        diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis
        egestas. In volutpat arcu ut felis sagittis, in finibus massa gravida. Pellentesque id tellus orci. Integer
        dictum, lorem sed efficitur ullamcorper, libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec
        maximus ullamcorper sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus vestibulum. Fusce
        dictum libero quis erat maximus, vitae volutpat diam dignissim.

        <string name="welcome_hero">Welcome, Hero!</string>
        <string name="back">Back</string>
        <string name="chore_list">Chore List</string>
        <string name="parent_settings">Parent Settings</string>
        <string name="store">Store</string>
        <string name="kids_settings">Kids Settings</string>
        <string name="highscores">HighScores</string>
        <string name="todo">TODO</string>
        <string name="sibling_list">Sibling List</string>
        <string name="sibling_1">Sibling 1</string>
        <string name="sibling_2">Sibling 2</string>
        <string name="sibling_3">Sibling 3</string>
        <string name="kids_settings1">Kids settings</string>
        <string name="select_a_profile">Select a Profile</string>
        <string name="choose_a_profile">Choose a Profile</string>
        <string name="reward_shop">Reward Shop</string>
        <string name="chorecoins_9999">ChoreCoins: 9999</string>
        <string name="chore_coin_store">Chore Coin Store</string>
        <string name="robux">Robux</string>
        <string name="_30_coins">30 coins</string>
        <string name="dine_out">dine out</string>
        <string name="_60_coins">60 coins</string>
        <string name="toy_choice">Toy Choice</string>
        <string name="_80_coins">80 coins</string>
        <string name="late_night">Late Night</string>
        <string name="_90_coins">90 coins</string>

        <string name="app_name" translatable="false">HouseHeroesV2</string>
        <string name="action_settings">Settings</string>
        <string name="app_logo" translatable="false">House Heroes Logo</string>
        <string name="first_fragment_label" translatable="false">First Fragment</string>
        <string name="second_fragment_label" translatable="false">Second Fragment</string>
        <string name="next" translatable="false">Next</string>
        <string name="previous" translatable="false">Previous</string>

        <!-- General -->
        <string name="default_user_name">User Name</string>
        <string name="parent_name">Parent\'s Name</string>
        <string name="profile_picture_desc">Profile picture</string>

        <!-- Buttons -->
        <string name="btn_add_chore">Add Chore</string>
        <string name="btn_save_chore">Save</string>
        <string name="btn_cancel_chore">Cancel</string>
        <string name="btn_add_child">Add Child</string>
        <string name="btn_save_child">Save</string>
        <string name="btn_cancel_child">Cancel</string>
        <string name="btn_change_password">Change Password</string>
        <string name="btn_save">Save</string>
        <string name="btn_cancel">Cancel</string>
        <string name="btn_delete_account">Delete Account</string>
        <string name="btn_confirm_delete">Confirm Deletion</string>
        <string name="btn_cancel_delete">Cancel</string>
        <string name="submit">Submit</string>
        <string name="child">string</string>
        <string name="parent">string</string>

        <!-- Titles -->
        <string name="title_add_chore">Add Chore</string>
        <string name="title_add_child">Add Child</string>
        <string name="title_change_password">Change Password</string>
        <string name="title_delete_account">Delete Account</string>
        <string name="title_enter_passcode">Enter Passcode</string>
        <string name="title_parent_portal">Welcome to the Parent Portal</string>
        <string name="title_choose_portal">Choose Your Portal</string>
        <string name="title_child_portal">Welcome, Hero!</string>

        <!-- Input Hints -->
        <string name="hint_chore_name">Enter chore name</string>
        <string name="hint_child_name">Enter child\'s name</string>
        <string name="hint_old_password">Enter old password</string>
        <string name="hint_new_password">Enter new password</string>
        <string name="hint_confirm_password">Confirm new password</string>


        <string name="hint_passcode">Passcode</string>

        <!-- Other Text -->
        <string name="login">Log In</string>

        <string name="signup_prompt">Don\'t have an account? Sign Up</string>
        <string name="tagline">Cleaning Made Fun!</string>
        <string name="warning_delete_account">
            Are you sure you want to delete your account? This action cannot be undone.
        </string>
    </string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Enter your name</string>
    <string name="hint_role">Enter your role (parent/child)</string>
    <string name="signup">Sign Up</string>
</resources>