<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:gravity="center"
        android:background="@drawable/splash_background"
        android:padding="16dp">


    <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center">

        <ImageView
                android:id="@+id/logo"
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:src="@drawable/logox"
                android:contentDescription="@string/app_logo"
                android:layout_marginBottom="24dp" />
    </LinearLayout>

    <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="16dp">

        <EditText
                android:id="@+id/nameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_name"
                android:inputType="textPersonName"
                android:background="@drawable/rounded_input"
                android:padding="12dp"
                android:layout_marginBottom="16dp" />

        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_role"
                android:layout_marginBottom="16dp">

            <AutoCompleteTextView
                    android:id="@+id/roleDropdown"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:inputType="none"
                    android:background="@drawable/rounded_input"
                    android:focusable="true"
                    android:clickable="true"
                    android:padding="12dp" />
        </com.google.android.material.textfield.TextInputLayout>
        <EditText
                android:id="@+id/emailEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:background="@drawable/rounded_input"
                android:padding="12dp"
                android:layout_marginBottom="16dp" />


        <EditText
                android:id="@+id/passwordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:background="@drawable/rounded_input"
                android:padding="12dp"
                android:layout_marginBottom="16dp" />


        <Button
                android:id="@+id/signupButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signup"
                android:paddingStart="32dp"
                android:paddingEnd="32dp"
                android:backgroundTint="@color/button_orange"
                android:textColor="#FFFFFF"
                android:layout_gravity="center"
                android:layout_marginBottom="16dp" />

    </LinearLayout>
</LinearLayout>
