<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        android:background="@color/blue">


        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="567dp"
                android:layout_weight="1"
                android:padding="16dp"
                android:gravity="center"
                tools:ignore="UseCompoundDrawables">


                <TextView
                        android:id="@+id/user_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/default_user_name"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        android:layout_marginTop="8dp"/>

                <ImageView
                        android:id="@+id/profile_picture"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:src="@drawable/default_profile_picture"
                        android:contentDescription="@string/profile_picture_desc"
                        android:background="@color/blue"
                        android:padding="4dp"/>
        </LinearLayout>

        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="567dp"
                android:layout_weight="1"
                android:padding="16dp"
                android:gravity="center_horizontal">

                <Button
                        android:id="@+id/add_chore_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/btn_add_chore"
                        android:layout_marginTop="8dp"
                        android:backgroundTint="@color/orange_peach"
                        android:textColor="@color/black"/>
                <Button
                        android:id="@+id/add_child_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/btn_add_child"
                        android:backgroundTint="@color/orange_peach"
                        android:textColor="@color/black"/>

                <Button
                        android:id="@+id/change_password_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/btn_change_password"
                        android:layout_marginTop="8dp"
                        android:backgroundTint="@color/orange_peach"
                        android:textColor="@color/black"/>

                <Button
                        android:id="@+id/delete_account_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/btn_delete_account"
                        android:layout_marginTop="8dp"
                        android:backgroundTint="@color/orange_peach"
                        android:textColor="@color/black"/>
                </LinearLayout>

</LinearLayout>