<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        android:gravity="center" >

        <TextView
                android:id="@+id/add_chore_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_add_chore"
                android:textSize="24sp"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:layout_marginBottom="16dp" />

    <EditText
            android:id="@+id/chore_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/hint_chore_name"
            android:inputType="text"
            android:layout_marginBottom="24dp"
            android:minHeight="48dp"
            android:textColorHint="#546E7A"
            tools:ignore="VisualLintTextFieldSize"/>

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center" >

            <Button
                    android:id="@+id/save_chore_button"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:text="@string/btn_save_chore"
                    android:padding="12dp"
                    android:gravity="center" />

            <Button
                    android:id="@+id/cancel_chore_button"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="141dp"
                    android:layout_height="match_parent"
                    android:text="@string/btn_cancel_chore"
                    android:layout_marginStart="8dp" />

        </LinearLayout>

</LinearLayout>