<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        android:gravity="center"
        android:background="@color/blue">

        <TextView
                android:id="@+id/change_password_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_change_password"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_gravity="center"
                android:layout_marginBottom="16dp"/>

        <EditText
                android:id="@+id/old_password"
                android:layout_width="339dp"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:hint="@string/hint_old_password"
                android:inputType="textPassword"
                android:autofillHints="password"
                android:layout_marginBottom="12dp"
                android:layout_marginHorizontal="8dp"
                android:textColorHint="@color/black" />

        <EditText
                android:id="@+id/new_password"
                android:layout_width="330dp"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:hint="@string/hint_new_password"
                android:inputType="textPassword"
                android:autofillHints="password"
                android:layout_marginBottom="12dp"
                android:layout_marginHorizontal="16dp"
                android:textColorHint="@color/black" />

        <EditText
                android:id="@+id/confirm_password"
                android:layout_width="332dp"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:hint="@string/hint_confirm_password"
                android:inputType="textPassword"
                android:autofillHints="password"
                android:layout_marginBottom="24dp"
                android:layout_marginHorizontal="16dp"
                android:textColorHint="@color/black" />

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginTop="16dp">

                <Button
                        android:id="@+id/save_password_button"
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="48dp"
                        android:layout_weight="1"
                        android:text="@string/btn_save"
                        android:padding="12dp"
                        android:gravity="center"
                        android:backgroundTint="@color/orange_peach"
                        android:textColor="@color/black"/>

                <Button
                        android:id="@+id/cancel_button"
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="48dp"
                        android:layout_weight="1"
                        android:text="@string/btn_cancel"
                        android:layout_marginStart="8dp"
                        android:padding="12dp"
                        android:gravity="center"
                        android:backgroundTint="@color/orange_peach"
                        android:textColor="@color/black"/>

        </LinearLayout>
</LinearLayout>