<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        android:gravity="center"
        android:background="@color/blue" >

        <TextView
                android:id="@+id/add_child_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_add_child"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_gravity="center"
                android:layout_marginBottom="16dp" />

    <EditText
            android:id="@+id/child_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/hint_child_name"
            android:inputType="text"
            android:layout_marginBottom="12dp"
            android:minHeight="48dp"
            android:textColorHint="@color/black"
            tools:ignore="VisualLintTextFieldSize"/>

    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="16dp">

        <Button
                android:id="@+id/save_child_button"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:text="@string/btn_save_child"
                android:padding="12dp"
                android:gravity="center"
                android:backgroundTint="@color/orange_peach"
                android:textColor="@color/black"/>

        <Button
                android:id="@+id/cancel_child_button"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:text="@string/btn_cancel_child"
                android:layout_marginStart="8dp"
                android:padding="12dp"
                android:gravity="center"
                android:backgroundTint="@color/orange_peach"
                android:textColor="@color/black"/>

    </LinearLayout>
</LinearLayout>